unpackaged/main/default/objects/Approval_Recycling_Program__c/Approval_Recycling_Program__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Approval Recycling Program</label>
</CustomObject>