unpackaged/main/default/objects/Approval_Recycling_Program__c/fields/Manager_is_Approver__c.field-meta.xml
<CustomField>
    <fullName>Manager_is_Approver__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked the approver will be the manager of the submitting user - otherwise it will be the hardcoded user in the flow</description>
    <inlineHelpText>If checked the approver will be the manager of the submitting user - otherwise it will be the hardcoded user in the flow</inlineHelpText>
    <label>Manager is Approver</label>
    <type>Checkbox</type>
</CustomField>