unpackaged/main/default/objects/Approval_Recycling_Program__c/fields/On_Balance_Approval__c.field-meta.xml
<CustomField>
    <fullName>On_Balance_Approval__c</fullName>
    <label>On Balance Approval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>