unpackaged/main/default/objects/Approval_Recycling_Program__c/fields/Tier_A_Lender_Approval__c.field-meta.xml
<CustomField>
    <fullName>Tier_A_Lender_Approval__c</fullName>
    <label>Tier A Lender Approval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>